profit page text change

--- a/config/locales/profit.yml
+++ b/config/locales/profit.yml
@@ -3,8 +3,8 @@ nl:
     title: "Gewenst aantal Watt Piek:"
     investment_year: "Investeringsjaar:"
     specific_principles: "Specifieke uitgangspunten:"
-    investment: "Investeringsoverzicht:"
-    estimated: "Geschat maandelijks rendement:"
+    investment: "Uw Investeringsoverzicht:"
+    estimated: "Uw Geschat maandelijks rendement:"
     establishment: "Prijsindicatie zonnesysteem:"
     installation_vat_html: "Zonne-installatie inclusief BTW <span class='underline'>exclusief subsidie</span>:"
     montage_cost: "Montage/installatie kosten inclusief BTW:"
@@ -13,6 +13,7 @@ nl:
     operating_expenses: "Exploitatiekosten:"
     repair_inverter: "Vervangen/reparatie omvormer in jaar %{year}:"
     additional_assumptions: "Aanvullende uitgangspunten:"
+    note: "Door met de blokjes te schuiven bepaald u de uitgangspunten voor uw rendement."
     note_1_html: "Berekening is gebaseerd op bedragen d.d. augustus 2013, voor een actuele, en een berekening op maat kunt u eenvoudig contact opnemen via ons %{contact_form}."
     note_2: "Uitgangspunt is dat het salderen van de totale productie mogelijk is."
     note_3: "Uitgangspunt afschrijving installatie in 25 jaar, verwachting levensduur is echter 40 jaar."
