text changes on about page

--- a/config/locales/about.yml
+++ b/config/locales/about.yml
@@ -1,20 +1,20 @@
 nl:
   about_page:
     over:
-      content1_html: "<p><strong class='orange'>Feiyue Group Europe</strong> ApS Denemarken is opgericht in 2007 als een dochteronderneming van Yamata Europa Vertriebs Gmbh, het Europese representatieve bedrijf van Zhejiang New Feiyue Corp Ltd. Feiyue is begonnen als leverancier van huishoudelijke verwarming en koeling apparaten. </p>"
-      content2_html: "<p><strong class='orange'>Feiyue Solar</strong> ApS: is \"Sinds 2012 geprofessionaliseerd in het installeren van zonnepanelen.\" De verkoop van zonnepaneelinstallaties, in samenwerking met 3 grote retailers in Denemarken, is een zeer succesvolle ontwikkeling voor het concern. De omzet is in 2012 verdubbeld. Eind 2013 hebben we meer dan 5.000 systemen opgeleverd. Momenteel werken er in Europa 70 mensen die het proces onder controle hebben. In April 2013 opende de vestiging Feiyue Solar BV in Oldenzaal. Het Nederlandse personeel is getraind door een Deens team professionals.</p>"
+      content1_html: "<p><strong class='orange'>Feiyue Group Europe</strong> ApS Denemarken is opgericht in 2007 als een dochteronderneming van Yamata Europa Vertriebs Gmbh, het Europese representatieve bedrijf van Zhejiang New Feiyue Corp Ltd. Feiyue is begonnen als leverancier van huishoudelijke verwarming en koeling apparatenen en heeft zich in de jaren ontwikkeld als volwaardig installatie bedrijf.</p>"
+      content2_html: "<p><strong class='orange'>Feiyue Solar</strong> ApS: is \"Sinds 2012 geprofessionaliseerd in het installeren van zonnepanelen.\" De verkoop van zonnepaneelinstallaties is, in samenwerking met 3 grote retailers in Denemarken, een zeer succesvolle ontwikkeling voor het concern. De omzet is in 2012 verdubbeld. Eind 2013 hebben we meer dan 5.000 systemen opgeleverd. Momenteel werken er in Europa 70 mensen die het proces onder controle hebben. In April 2013 opende de vestiging Feiyue Solar BV in Oldenzaal. Het Nederlandse personeel is getraind door een Deens team professionals.</p>"
     montage:
       title: "Montage"
       installation_team: "Installatieteam"
-      content1_html: <p>Als u een zonnepanelensysteem inclusief montage aanschaft, komt een montageploeg samen met een elektricien het systeem bij u installeren. In de maanden April, Mei en Juni hebben we meer dan 750 zonnepaneelsystemen geïnstalleerd in Denemarken. Wij zorgen dat onze technici voldoende ervaring hebben en dat ze de installatie op verantwoorde wijze uitvoeren, in overeenstemming met de geldende wet en regelgeving. Feiyue Solar streeft altijd naar de beste kwaliteit.</p>
+      content1_html: <p>Als u een zonnepanelensysteem inclusief montage aanschaft, komt een montageploeg samen met een elektricien het systeem bij u installeren. Wij zorgen dat onze technici voldoende ervaring hebben en dat ze de installatie op verantwoorde wijze uitvoeren, in overeenstemming met de geldende wet en regelgeving. Feiyue Solar streeft altijd naar de beste kwaliteit.</p>
       schletter: "Montagesysteem"
-      content3_html: <p>Feiyue Solar werkt in hoofdzaak met het Duitse Schletter. Schletter is wereldmarktleider op het gebied van solar montage systemen. Het bedrijf bestaat sinds 1968 en is sinds 2001 actief in solar bevestigingsmateriaal. Het zeer uitgebreide assortiment, met 10 jaar garantie, biedt een oplossing voor vrijwel elk denkbaar dak. <br> <a href="http://www.schletter.de/EN/download/solar-mounting.html">Schletter solar mounting system.</a></p>
+      content3_html: <p>Feiyue Solar werkt met het Duitse Schletter montage systeem. Schletter is wereldmarktleider op het gebied van zonnepanelen montage systemen. Het bedrijf bestaat sinds 1968 en is sinds 2001 actief in solar bevestigingsmateriaal. Het zeer uitgebreide assortiment, met 10 jaar garantie, biedt een oplossing voor vrijwel elk denkbaar dak. <br> <a href="http://www.schletter.de/EN/download/solar-mounting.html">Schletter solar mounting system.</a></p>
     by_feiyue:
       title: "Installatie door FEIYUE Solar"
-      content_html: <p>Door de grote ervaring bent u met Feiyue Solar verzekerd van een installatie met de hoogste kwaliteit. Feiyue Solar heeft in 2012 meer dan 3.000 zonnesystemen geïnstalleerd in Denemarken. Dit komt overeen met ongeveer 18 Megawatt. Feiyue Solar is in Denemarken lid van de branchevereniging voor de bouw en zonne-energie en is gecertificeerd door het Deens Technologisch Instituut. Wij streven naar vakmanschap en professionaliteit. Er zit altijd 10-jaar garantie op de installatie werkzaamheden van Feiyue Solar.</p>
+      content_html: <p>Door de grote ervaring bent u met Feiyue Solar verzekerd van een installatie met de hoogste kwaliteit. Feiyue Solar heeft alleen al in 2012 meer dan 3.000 zonnesystemen geïnstalleerd in Denemarken. Dit komt overeen met ongeveer 18 Megawatt. Feiyue Solar ApS is lid van de branchevereniging voor de bouw en zonne-energie en is gecertificeerd door het Deens Technologisch Instituut. Wij streven naar vakmanschap en professionaliteit. Er zit altijd 10-jaar garantie op de installatie werkzaamheden van Feiyue Solar.</p>
     consultant:
       title: "Een installatie-adviseur komt bij u langs"
-      content_html: <p>U wordt altijd bezocht door één van onze adviseurs als u bij ons een zonnepanelensysteem bestelt. U kunt kiezen of onze adviseur u vóór of na uw aankoop bezoekt. De kosten van een bezoek bedragen € 150 als u kiest voor een bezoek vóór aankoop. Dit bedrag wordt van het aankoopbedrag afgetrokken als u besluit een installatie te kopen. De adviseur beoordeelt of uw dak geschikt is voor installatie van zonnepanelen. Onze montage adviseurs maken geen statische berekening, om de onderconstructie te kunnen garanderen zal er door u een constructeur moeten worden ingeschakeld. Als uw dak niet geschikt is, stelt hij een alternatieve plaatsingsmogelijkheid voor.</p>
+      content_html: <p>U wordt altijd bezocht door één van onze adviseurs als u bij ons een zonnepanelensysteem bestelt. U kunt kiezen of onze adviseur u vóór of na uw aankoop bezoekt. De kosten van een bezoek bedragen € 149 als u kiest voor een bezoek vóór aankoop. Dit bedrag wordt van het aankoopbedrag afgetrokken als u besluit een installatie te kopen. De adviseur beoordeelt of uw dak geschikt is voor installatie van zonnepanelen. Onze montage adviseurs maken geen statische berekening, om de onderconstructie te kunnen garanderen zal er door u een constructeur moeten worden ingeschakeld. Als uw dak niet geschikt is, stelt hij een alternatieve plaatsingsmogelijkheid voor.</p>
         <p><strong class="orange">Tijdens zijn bezoek doet de adviseur het volgende:</strong></p>
         <ul>
           <li>de locatie van de panelen bepalen conform de theoretische berekening/raming.</li>
@@ -23,7 +23,7 @@ nl:
           <li>bepalen of de gewenste locatie voor de omvormer mogelijk is.</li>
           <li>de montagemethode bepalen die het best past bij uw dak.</li>
           <li>de montagemethode bepalen die het best past bij de afstand tussen liggers en tengels.</li>
-          <li>beoordelen of een extra groep in de meterkast mogelijk en noodzakelijk is.</li>
+          <li>beoordelen of het plaatsen van een extra groep in de meterkast mogelijk en noodzakelijk is.</li>
           <li>beoordelen of de locatie geschikt is voor het plaatsen van een zonnepanelensysteem.</li>
           <li>beoordelen locatie op wet en regelgeving en optioneel onderzoek met betrekking tot mogelijk te verkrijgen subsidies.</li>
         </ul>
@@ -36,10 +36,14 @@ nl:
           <ul>
             <li>Goothoogte tot 6 meter.</li>
             <li>Installatie op een vlak oppervlak (pannendak, eterniet, bitumen e.d.).</li>
-            <li>Tussen de omvormers en de zonnepanelen 100 meter kabel met een doorsnede van 4 mm. In totaal worden er 8 kabels getrokken.  De feitelijke afstand tussen de omvormer en het zonnepaneel is daardoor ongeveer 7,5 meter.</li>
-            <li>Kabellengte tussen de omvormer en meterkast mag niet meer zijn dan 7,5 meter (lengte per kabel).</li>
+            <li>Tussen de omvormers en de zonnepanelen 100 meter kabel met een doorsnede van 4 mm.</li>
+            <li>Kabellengte tussen de omvormer en meterkast 7,5 meter.</li>
+            <li>Voldoende ruimte voor omvormers aanwezig en de omvormers moeten conform de richtlijnen te kunnen worden gemonteerd.</li>
+            <li>Bij blinde oplossingen dient er een loze leiding van de omvormer naar meterkast te zijn.</li>
+            <li>Meterkast dient geschikt te zijn voor de aangeboden zonnepaneleninstallatie.</li>
             <li>De bestaande elektrische aansluitingen in de woning moeten legaal zijn.</li>
             <li>Uw elektriciteitsleverancier moet uw huidige meter goedkeuren of een andere meter plaatsen die past in uw huidige meterkast / schakelpaneel.</li>
+            <li>Meterkast dient geschikt te zijn voor de aangeboden zonnepaneleninstallatie.</li>
             <li>Er zal ruimte zijn voor verplaatsbare steigers langs de muur van het huis waar de installatie zal plaatsvinden. In de praktijk betekent dit dat er een vlakke rand van ongeveer 1,5 meter langs de muur moet zijn.</li>
             <li>U dient op het vasteland te wonen.</li>
           </ul>
