energy saving page

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -22,6 +22,7 @@ nl:
   profit: "Uw rendement"
   about: "Over Feiyue"
   faq: "Vragen"
+  energy_saving: "Zonne-energie opwekken"
 
   welcome: "Welkom bij"
   actions: "acties"
