--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -20,7 +20,8 @@ nl:
   weight: "gewicht"
 
   profit: "Uw rendement"
-  about: "Over Feiyue"
+  about: "Over Zonis Feiyue"
+  about_menu: Over Feiyue
   faq: "Vragen"
   energy_saving: "Zonne-energie opwekken"
 
