--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -20,7 +20,7 @@ nl:
   weight: "gewicht"
 
   profit: "Uw rendement"
-  about: "Over Zonis Feiyue"
+  about: "Over Feiyue"
   about_menu: Over Feiyue
   faq: "Vragen"
   energy_saving: "Zonne-energie opwekken"
@@ -56,4 +56,4 @@ nl:
         content_html: "<span class='orange'>Terugverdientijd vanaf 5 jaar!</span> <br> Bespaar 90% op uw elektriciteitsverbruik. <br> Wij maken een gratis offerte op maat met rendementberekening en 3D-visualisatie. <br> Vul daarvoor ons %{contact_link} in. <br> Bent u benieuwd naar wat de installatie u in 25 jaar oplevert? %{profit_link} kunt u uw rendement berekenen."
       item2:
         title: "Info"
-        content_html: "<span>ZON = FEIYUE Solar!</span> <br> Met een zonnepanelensysteem van Feiyue Solar bent u verzekerd van een installatie met een hoge kwaliteit. <span class='orange'>25 jaar verzekerde garantie</span> op het rendement en 10 jaar verzekerde fabrieks garantie. Onze producten komen als beste uit de test bij het onafhankelijke Duitse Photon. <br> In de <a href='http://youtu.be/UN-wDknxBec'>film</a> treft u meer informatie over onze werkwijze."
+        content_html: "<span>FEIYUE Solar!</span> <br> Met een zonnepanelensysteem van Feiyue Solar bent u verzekerd van een installatie met een hoge kwaliteit. <span class='orange'>25 jaar verzekerde garantie</span> op het rendement en 10 jaar verzekerde fabrieks garantie. Onze producten komen als beste uit de test bij het onafhankelijke Duitse Photon. <br> In de <a href='http://youtu.be/UN-wDknxBec'>film</a> treft u meer informatie over onze werkwijze."
